@@ -26,4 +26,4 @@ Type::Tiny = 0
 Sub::Util = 1.40
 
 [Prereqs / TestRequires]
-Type::Tiny = 0
+Specio = 0.14
