@@ -5,14 +5,14 @@ use Test2::Bundle::Extended;
 use Test2::Plugin::NoWarnings;
 
 use Params::ValidationCompiler qw( validation_for );
-use Types::Standard qw( Int );
+use Specio::Library::Builtins;
 
 {
     my $sub = validation_for(
         params => {
             foo => 1,
             bar => {
-                type     => Int,
+                type     => t('Int'),
                 optional => 1,
             },
         },
