@@ -3,6 +3,7 @@ use warnings;
 
 use Test2::Bundle::Extended;
 use Test2::Plugin::NoWarnings;
+use Test2::Require::Module 'Type::Tiny';
 
 use Params::ValidationCompiler qw( validation_for );
 use Types::Standard qw( ArrayRef Int );
